# fractional_model_test

./: .gitignore  CHANGELOG  Makefile  README.md  cppheaderparser.py  pyproject.toml  setup.py
src/: cppheaderparser.py
src/artery/matlaws/: HModels.py  artery.py  artery_models.py  objective_functions.py
src/artery/matlaws/caputoD/: caputoD.py
src/artery/plotting/: barplot.py  plotting.py
src/artery/post_processing/: hermite_filter.py  hermite_poly.py
src/artery/tools/: newlogger.py
src/cpp/: CTvalues_optimization.hpp
src/cpp/constitutive/: hog_2D.cpp  hog_2D.hpp  interfaces.hpp  myocardium_3D.cpp  myocardium_3D.hpp  neohookean.cpp  neohookean.hpp  planar_hog.cpp  planar_hog.hpp  quadratic_fiber.cpp  quadratic_fiber.hpp  struc_hog_2D.cpp  struc_hog_2D.hpp
src/cpp/fractional/: caputo.cpp  caputo.hpp  fractional.cpp  fractional.hpp
src/cpp/kinematics/: kinematics.cpp  kinematics.hpp  tensor_algebra.cpp  tensor_algebra.hpp
src/cpp/optimization/: objective.cpp  objective.hpp  simulation.cpp  simulation.hpp  templates.cpp  templates.hpp
src/cpp/tissue_models/: femoral_model.cpp  femoral_model.hpp  models.hpp  myocardium_ve_model.cpp  myocardium_ve_model.hpp  planar_elastin_matrix_model.cpp  planar_elastin_matrix_model.hpp  thoracic_default_model.cpp  thoracic_default_model.hpp
src/cython/: artery.pyx
src/cython/headers/: CTvalues_optimization.pxd
src/cython/headers/constitutive/: hog_2D.pxd  interfaces.pxd  neohookean.pxd  (+4 more)
unittests/: test_hyperelastic_sim.py  test_hyperelastic_synthetic.py  test_viscoelastic_sim.py  test_viscoelastic_synthetic.py
(+12 files in other folders)
